--- a/index.html
+++ b/index.html
@@ -1,3 +1,59 @@
-<p>Hello 大家好</p>
-<p>这里是我的个人网站，欢迎大家！</p>
-<p>这是一个静态网站</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sheldon Axler's Home Page</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 20px;
+    }
+    header {
+      text-align: center;
+    }
+    header img {
+      width: 200px;
+      border-radius: 10px;
+    }
+    h1 {
+      font-size: 2rem;
+    }
+    a {
+      color: blue;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    .content {
+      margin-top: 20px;
+    }
+    .new {
+      color: red;
+      font-weight: bold;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Sheldon Axler's Home Page</h1>
+    <img src="cat_image.jpg" alt="Sheldon and his cat">
+    <p>Sheldon Axler, Professor Emeritus, <a href="#">Mathematics Department</a>, <a href="#">San Francisco State University</a></p>
+  </header>
+
+  <div class="content">
+    <h2>Books, Software, and Videos</h2>
+    <p>(most recent versions only)</p>
+    <ul>
+      <li><span class="new">NEW!</span> Sheldon Axler. <a href="#">Linear Algebra Done Right</a>, fourth edition, Springer, 2024.</li>
+      <li>Sheldon Axler. <a href="#">Measure, Integration & Real Analysis</a>, Springer, 2020.</li>
+      <li>Sheldon Axler. <a href="#">Harmonic Function Theory software</a>, 2020.</li>
+      <li>Sheldon Axler. <a href="#">Linear Algebra Done Right videos</a>, 2017.</li>
+      <!-- 继续添加其他内容 -->
+    </ul>
+  </div>
+</body>
+</html>
+
