--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sheldon Axler's Home Page</title>
+  <title>Cao Yu's Home Page</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -38,20 +38,14 @@
 </head>
 <body>
   <header>
-    <h1>Sheldon Axler's Home Page</h1>
-    <img src="cat_image.jpg" alt="Sheldon and his cat">
-    <p>Sheldon Axler, Professor Emeritus, <a href="#">Mathematics Department</a>, <a href="#">San Francisco State University</a></p>
+    <h1>Cao Yu's Home Page</h1>
   </header>
 
   <div class="content">
-    <h2>Books, Software, and Videos</h2>
+    <h2>Background</h2>
     <p>(most recent versions only)</p>
     <ul>
-      <li><span class="new">NEW!</span> Sheldon Axler. <a href="#">Linear Algebra Done Right</a>, fourth edition, Springer, 2024.</li>
-      <li>Sheldon Axler. <a href="#">Measure, Integration & Real Analysis</a>, Springer, 2020.</li>
-      <li>Sheldon Axler. <a href="#">Harmonic Function Theory software</a>, 2020.</li>
-      <li>Sheldon Axler. <a href="#">Linear Algebra Done Right videos</a>, 2017.</li>
-      <!-- 继续添加其他内容 -->
+      <li>
     </ul>
   </div>
 </body>
