--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -43,9 +43,8 @@
 
   <div class="content">
     <h2>Background</h2>
-    <p>(most recent versions only)</p>
     <ul>
-      <li>
+      <li>2019-2024 Shanghai Jiao Tong University
     </ul>
   </div>
 </body>
