--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
   </header>
 
   <div class="content">
-    <h2>Background</h2>
+    <h2>Education background</h2>
     <ul>
-      <li>2019-2024 Shanghai Jiao Tong University
+      <li>2019.09-2024.06: B.S. Shanghai Jiao Tong University, Chemistry(major) and Mathematics(minor)
+      <li>2024.09-now: P.H.D. Shanghai Jiao Tong University, Physics
     </ul>
   </div>
 </body>
