--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Cao Yu's Home Page</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: Calibri, sans-serif;
       line-height: 1.6;
       margin: 20px;
     }
