--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
     }
   </style>
 </head>
+  
 <body>
   <header>
     <h1>Cao Yu's Home Page</h1>
+    <p>欢迎来到我的主页！<p>
   </header>
 
   <div class="content">
@@ -44,6 +46,21 @@
       <li>2024.09-now: P.H.D. Shanghai Jiao Tong University, Physics
     </ul>
   </div>
+  
+  <div class="content">
+    <h2>Physics and mathmatics</h2>
+    <ul>
+      <li>这里会放一些笔记或者日常
+    </ul>
+  </div>
+
+  <div class="content">
+    <h2>Chemistry</h2>
+    <ul>
+      <li>这里是化学笔记
+    </ul>
+  </div>
+  
 </body>
 </html>
 
