--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
       color: red;
       font-weight: bold;
     }
+    .separator {
+      border: 0;
+      border-top: 1px solid gray;
+      margin: 20px 0;
+    }
   </style>
 </head>
   
@@ -39,6 +44,8 @@
     <p>欢迎来到我的主页！<p>
   </header>
 
+  <hr class="separator">
+
   <div class="content">
     <h2>Education background</h2>
     <ul>
@@ -46,6 +53,8 @@
       <li>2024.09-now: P.H.D. Shanghai Jiao Tong University, Physics
     </ul>
   </div>
+
+  <hr class="separator">
   
   <div class="content">
     <h2>Physics and mathmatics</h2>
@@ -53,6 +62,8 @@
       <li>这里会放一些笔记或者日常
     </ul>
   </div>
+
+  <hr class="separator">
 
   <div class="content">
     <h2>Chemistry</h2>
