--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <hr class="separator">
 
   <div class="content">
-    <h2>Education background</h2>
+    <h2>Bolgs</h2>
     <ul>
       <li>2019.09-2024.06: B.S. Shanghai Jiao Tong University, Chemistry(major) and Mathematics(minor)
       <li>2024.09-now: P.H.D. Shanghai Jiao Tong University, Physics
@@ -65,12 +65,12 @@
 
   <hr class="separator">
 
+  
   <div class="content">
-    <h2>Chemistry</h2>
-    <ul>
-      <li>这里是化学笔记
-    </ul>
+    <h2><a href="#">Vita</a></h2>
   </div>
+  
+  <hr class="separator">
   
 </body>
 </html>
