--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
   <div class="content">
     <h2>Bolgs</h2>
     <ul>
-      <li>2019.09-2024.06: B.S. Shanghai Jiao Tong University, Chemistry(major) and Mathematics(minor)
-      <li>2024.09-now: P.H.D. Shanghai Jiao Tong University, Physics
+      <li>
+      <li><a href="#">More...</a>
     </ul>
   </div>
 
